--- a/hdmi_passthrough_720p.srcs/sources_1/bd/design_1/ui/bd_1f5defd0.ui
+++ b/hdmi_passthrough_720p.srcs/sources_1/bd/design_1/ui/bd_1f5defd0.ui
@@ -2,43 +2,41 @@
    DisplayTieOff: "1",
    guistr: "# # String gsaved with Nlview 6.4.10  2014-10-02 bk=1.3207 VDI=35 GEI=35 GUI=JA:1.8
 #  -string -flagsOSRD
-preplace port hdmi_scl -pg 1 -y 20 -defaultsOSRD
-preplace port vga_hs -pg 1 -y 170 -defaultsOSRD
-preplace port sw1 -pg 1 -y 390 -defaultsOSRD
-preplace port hdmi_clk_n -pg 1 -y 110 -defaultsOSRD
-preplace port clk -pg 1 -y 200 -defaultsOSRD
-preplace port vga_vs -pg 1 -y 190 -defaultsOSRD
-preplace port hdmi_clk_p -pg 1 -y 90 -defaultsOSRD
-preplace port DDC -pg 1 -y 70 -defaultsOSRD
-preplace port hdmi_sda -pg 1 -y 50 -defaultsOSRD
-preplace portBus vga_b -pg 1 -y 150 -defaultsOSRD
-preplace portBus hdmi_d_n -pg 1 -y 150 -defaultsOSRD
-preplace portBus hdmi_hpd -pg 1 -y 410 -defaultsOSRD
-preplace portBus hdmi_out_en -pg 1 -y 370 -defaultsOSRD
-preplace portBus hdmi_d_p -pg 1 -y 130 -defaultsOSRD
-preplace portBus vga_r -pg 1 -y 110 -defaultsOSRD
-preplace portBus vga_g -pg 1 -y 130 -defaultsOSRD
-preplace inst xlconstant_0 -pg 1 -lvl 3 -y 360 -defaultsOSRD
-preplace inst clk_wiz_0 -pg 1 -lvl 1 -y 210 -defaultsOSRD
-preplace inst dvi2rgb_0 -pg 1 -lvl 2 -y 160 -defaultsOSRD
-preplace inst rgb2vga_0 -pg 1 -lvl 3 -y 150 -defaultsOSRD
+preplace port vga_hs -pg 1 -y 310 -defaultsOSRD
+preplace port hdmi_clk_n -pg 1 -y 250 -defaultsOSRD
+preplace port clk -pg 1 -y 340 -defaultsOSRD
+preplace port vga_vs -pg 1 -y 330 -defaultsOSRD
+preplace port hdmi_clk_p -pg 1 -y 230 -defaultsOSRD
+preplace port DDC -pg 1 -y 190 -defaultsOSRD
+preplace portBus vga_b -pg 1 -y 290 -defaultsOSRD
+preplace portBus hdmi_d_n -pg 1 -y 290 -defaultsOSRD
+preplace portBus hdmi_hpd -pg 1 -y 50 -defaultsOSRD
+preplace portBus hdmi_out_en -pg 1 -y 140 -defaultsOSRD
+preplace portBus hdmi_d_p -pg 1 -y 270 -defaultsOSRD
+preplace portBus vga_r -pg 1 -y 250 -defaultsOSRD
+preplace portBus vga_g -pg 1 -y 270 -defaultsOSRD
+preplace inst GND -pg 1 -lvl 3 -y 140 -defaultsOSRD
+preplace inst VDD -pg 1 -lvl 3 -y 50 -defaultsOSRD
+preplace inst clk_wiz_0 -pg 1 -lvl 1 -y 350 -defaultsOSRD
+preplace inst dvi2rgb_0 -pg 1 -lvl 2 -y 280 -defaultsOSRD
+preplace inst rgb2vga_0 -pg 1 -lvl 3 -y 290 -defaultsOSRD
+preplace netloc xlconstant_1_dout 1 3 1 N
 preplace netloc rgb2vga_0_vga_pRed 1 3 1 N
-preplace netloc TMDS_Clk_p_1 1 0 2 NJ 90 360
-preplace netloc sw1_1 1 0 4 NJ 390 NJ 390 NJ 410 N
+preplace netloc TMDS_Clk_p_1 1 0 2 NJ 230 N
 preplace netloc rgb2vga_0_vga_pGreen 1 3 1 N
-preplace netloc TMDS_Clk_n_1 1 0 2 NJ 110 350
-preplace netloc dvi2rgb_0_DDC 1 2 2 670 240 NJ
-preplace netloc xlconstant_0_dout 1 3 1 900
+preplace netloc TMDS_Clk_n_1 1 0 2 NJ 250 N
+preplace netloc dvi2rgb_0_DDC 1 2 2 N 190 NJ
+preplace netloc xlconstant_0_dout 1 3 1 N
 preplace netloc clk_1 1 0 1 N
-preplace netloc TMDS_Data_p_1 1 0 2 NJ 130 340
+preplace netloc TMDS_Data_p_1 1 0 2 NJ 270 N
 preplace netloc rgb2vga_0_vga_pVSync 1 3 1 N
 preplace netloc rgb2vga_0_vga_pHSync 1 3 1 N
-preplace netloc TMDS_Data_n_1 1 0 2 NJ 150 330
-preplace netloc clk_wiz_0_clk_out1 1 1 1 350
-preplace netloc dvi2rgb_0_RGB 1 2 1 660
+preplace netloc TMDS_Data_n_1 1 0 2 NJ 290 N
+preplace netloc clk_wiz_0_clk_out1 1 1 1 330
+preplace netloc dvi2rgb_0_RGB 1 2 1 630
 preplace netloc rgb2vga_0_vga_pBlue 1 3 1 N
-preplace netloc dvi2rgb_0_PixelClk 1 2 1 680
-levelinfo -pg 1 140 250 510 790 920
+preplace netloc dvi2rgb_0_PixelClk 1 2 1 640
+levelinfo -pg 1 140 250 480 750 890
 ",
 }
 {
